re PR fortran/25068 ([4.0/4.1] IOSTAT should be default integer when -std=f95)

PR fortran/25068

	* io.c (resolve_tag): Add correct diagnostic for F2003 feature.

	* gfortran.dg/iostat_3.f90: New test.

From-SVN: r108360